--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,9 @@ workflows:
   maven_test:
     jobs:
       - maven/test
+  build-and-deploy:
+    jobs:
+      - build
       - deploy:
           requires:
             - build # only deploy once build job has completed
