--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,21 +3,21 @@ version: 2.1
 orbs:
   maven: circleci/maven@0.0.12
 
-  jobs:
-    deploy-job:
-        steps:
-          -add_ssh_keys:
-            fingerprints:
-              -"SHA256:hmJkt5Jka59bJZtkSSGUz1sc3qWFm8rPOkZQkXxXlE4."
-    deploy:
-      name: deploy
-      machine:
-        enabled: true
+jobs:
+  deploy-job:
       steps:
-        - run:
-            name: Deploy Over SSH
-            command: |
-              ssh root@47.93.23.13 "nohup java -Xmx1024m -Xms256m -jar /tmp/demo-0.0.1-SNAPSHOT.jar &"
+        -add_ssh_keys:
+          fingerprints:
+            -"SHA256:hmJkt5Jka59bJZtkSSGUz1sc3qWFm8rPOkZQkXxXlE4."
+  deploy:
+    machine:
+      enabled: true
+    working_directory: ~/
+    steps:
+      - run:
+          name: Deploy Over SSH
+          command: |
+            ssh root@47.93.23.13 "nohup java -Xmx1024m -Xms256m -jar /tmp/demo-0.0.1-SNAPSHOT.jar &"
 
 
 workflows:
@@ -26,4 +26,8 @@ workflows:
       - maven/test
   deploy:
     jobs:
-      - deploy
+      - deploy-job
+      - deploy:
+          requires:
+            - deploy-job
+            - maven_test
