--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,9 @@ jobs:
       - run:
           name: Deploy Over SSH
           command: |
-            ssh root@47.93.23.13 nohup java -Xmx1024m -Xms256m -jar /root/demo-0.0.1-SNAPSHOT.jar &
+            echo ${MY_PEM} | tr '|' '\012' > ~/.ssh/my.pem
+            chmod 400 ~/.ssh/my.pem
+            ssh -i ~/.ssh/my.pem -o StrictHostKeyChecking=no root@47.93.23.13 "nohup java -Xmx1024m -Xms256m -jar /root/demo-0.0.1-SNAPSHOT.jar &"
       
 
 workflows:
