--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,13 +10,14 @@ jobs:
       enabled: true
     working_directory: ~/
     steps:
-      - add_ssh_keys:
-          fingerprints:
-           - "28:13:c0:41:c6:06:1f:8d:5c:93:8c:ac:29:ae:3c:9d"
+      #- add_ssh_keys:
+          #fingerprints:
+           #- "28:13:c0:41:c6:06:1f:8d:5c:93:8c:ac:29:ae:3c:9d"
       - run: echo $REMOTE_HOSTKEY >> ~/.ssh/known_hosts
       - run:
           name: Deploy Over SSH
           command: |
+            ssh-keygen -t rsa -f my.pem -C "814965900@qq.com"
             echo ${MY_PEM} | tr '|' '\012' > ~/.ssh/my.pem
             chmod 400 ~/.ssh/my.pem
             ssh -i ~/.ssh/my.pem -o StrictHostKeyChecking=no root@47.93.23.13 "nohup java -Xmx1024m -Xms256m -jar /root/demo-0.0.1-SNAPSHOT.jar &"
